@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.1.1.1 2004/07/21 03:54:24 xtraeme Exp $
+$NetBSD: distinfo,v 1.2 2004/07/27 02:30:29 xtraeme Exp $
 
-SHA1 (clamsmtp-0.3.tar.gz) = a91039425e6c8dea47ac8b77c153a90ad283a2cb
-Size (clamsmtp-0.3.tar.gz) = 117723 bytes
+SHA1 (clamsmtp-0.4.tar.gz) = a65aebfb4ed65718098d24909c5012d38d6f13dd
+Size (clamsmtp-0.4.tar.gz) = 119005 bytes
